feat: update unban request body and unban  multiple divisions
